[package]
name = "uhd"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
description = "Bindings to the UHD (USRP Hardware Driver) library, which provides support for Ettus Research / National Instruments Universal Software Radio Peripheral devices"
repository = "https://github.com/samcrow/uhd-rust"

[dependencies]
num-complex = "0.3.1"

[dependencies.uhd-sys]
version = "0.1.1"
path = "../uhd-sys"
